@@ -1,3 +1,9 @@
+Mon Sep 10 00:16:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/diff-builds-and-group-fixed-tests-only.sh:
+        * bin/mail_test_stats.sh:
+          Make sure we compare with the latest micro
+
 Fri Sep  7 20:00:51 UTC 2012  Steve Huston  <shuston@riverace.com>
 
         * ace/SSL/SSL_SOCK_Stream.inl (recv_i): Remove the incorrect comment
